--- a/css/estilos.css
+++ b/css/estilos.css
@@ -6,6 +6,13 @@ body{
 	margin: 0px auto;
 	max-width: 1024px;
 }
+footer{	
+	background: blue;
+	color: white;
+	font-size: 0.7em;
+	text-align: center;
+	width: 100%;
+}
 header{
 	border: 1px solid blue;
 	text-align: center;
@@ -19,11 +26,22 @@ header nav ul li{
 	/*border: 1px solid tomato;*/
 	background: blue;
 	border-radius: 5px;
+	box-shadow: 5px 5px 1px black;
 	color:white;
 	display: inline-block;
 	margin: 0px 10px 0px 0px;
 	padding: 5px 10px;
 	width: 84px;
+}
+header nav ul li:hover{
+	background: orange;
+	color: blue;
+}
+main article{
+	/*border: 1px solid tomato;*/
+	display: inline-block;
+	vertical-align: top;
+	width: 48%;
 }
 
 
