--- a/practica01css/css/estilos.css
+++ b/practica01css/css/estilos.css
@@ -10,6 +10,15 @@ form{
 	margin-top: -40px;
 }
 
+form input{ /*todos los input dentro del form*/
+	border-radius: 5px;
+}
+
+form input[type="button"]{
+	background: green;
+	color: white;
+}
+
 header{
 	background: #B3D8EB;
 }
@@ -32,6 +41,45 @@ header nav ul li{
 #logo{
 	margin-top: -150px;
 }
+
+#seccion01 article{
+	/*border: 1px solid red;*/
+	text-align: center;
+}
+
+#seccion01 article img{
+	border: 5px solid rgba(150,150,150,0.5);
+	margin-top: 15px;
+	width: 98%;
+}
+#seccion02 article{
+	display: inline-block;
+	vertical-align: top;
+	width: 32.8%;
+}
+
+.otraSeccion, .unaSeccion{
+	font-weight: bold; /*negritas*/
+}
+
+.otraSeccion{
+	font-size: 2.5em;	
+}
+
+.unaSeccion{
+	font-size: 4.5em;	
+}
+
+
+
+
+
+
+
+
+
+
+
 
 
 
