Practica CSS3 02 terminada

--- a/practica02css/css/estilos.css
+++ b/practica02css/css/estilos.css
@@ -24,8 +24,14 @@ header nav ul li{
 	margin-right: 15px;
 	/*text-decoration: underline;*/
 }
+#bgoffer{
+	left: -35px;
+	position: relative;
+	top:-410px;
+}
 #primerseccion{
 	height: 318px;
+	margin-top: 60px;
 }
 #primerseccion article{
 	display: inline-block;
@@ -39,13 +45,57 @@ header nav ul li{
 	float: right;
 }
 #secc01art01{
-	width: 50%;
+	margin-left: 30px;
+	width: 60%;
 }
 #secc01art01 img{
-	width: 100%;
+	
 }
 #secc01art02{
-	width: 20%;
+	margin-left: 50px;
+	width: 30%;
+}
+#secc01art02 ul{
+	list-style: none;
+}
+#secc01art02 ul li:before{
+	content: "• ";
+	color: #FF0099;
+}
+#segundaseccion article{
+	text-align: right;
+	padding-right: 160px; 
+}
+#terceraseccion article{
+	display: inline-block;
+	vertical-align: top;
+	width: 22%;
+}
+#terceraseccion article img{
+	vertical-align: middle;
+}
+.colorazul,.colorrosa,.colorverde{
+	font-size: 1.5em;
+	font-weight: bold;
+}
+.colorazul{
+	color: #16BEF8;
+}
+.colorrosa{
+	color: #F4A3C6;
+}
+.colorverde{
+	color: #A6DE47;
+}
+.numerotelefono{
+	color: #FF0099;
+	font-size: 2em;
+	font-weight: bold;
+}
+.wecanoffer{
+	color: #FF0099;
+	font-size: 3.5em;
+	font-weight: bold;
 }
 
 
