--- a/randomuser/css/estilos.css
+++ b/randomuser/css/estilos.css
@@ -1,11 +1,41 @@
 body{
 	font-size: 16px;
-	text-align: center;
+	/*text-align: center;*/
 }
 img{
-	border-radius: 200px;
-	width: 200px;
+	border-radius: 100px;
+	width: 100px;
 }
+
+main{
+	/*border: 1px solid black;*/
+	height: 768px;
+	margin-top: 0px;
+}
+
+main article{
+	display: inline-block;
+	vertical-align: top;
+}
+
+#btnInfo{
+	border-radius: 5px;
+	margin-top: 10px;
+	font-size: 1em;
+}
+
+#izquierda{
+	background: blue;
+	height: 768px;
+	text-align: center;
+	width: 30%;
+}
+
+#derecha{
+	background: white;
+	width: 68%;
+}
+
 #txtNombre{
 	font-size: 2em;
 }
